fix: trying to sort out the affliate links.
Also fixed the create blog page as it was failing.

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link rel="apple-touch-icon" href="logo192.png"/>
 
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <SCRIPT charset="utf-8" type="text/javascript" src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=GB&ID=V20070822%2FGB%2Fshanepreate07-21%2F8005%2F02eb354c-570f-46af-a0ff-b792baa778a0"> </SCRIPT> <NOSCRIPT><A rel="nofollow" HREF="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=GB&ID=V20070822%2FGB%2Fshanepreate07-21%2F8005%2F02eb354c-570f-46af-a0ff-b792baa778a0&Operation=NoScript">Amazon.co.uk Widgets</A></NOSCRIPT>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
